@@ -6,13 +6,13 @@
 
     <groupId>org.ffffffff0x</groupId>
     <artifactId>BerylEnigma</artifactId>
-    <version>1.3.3</version>
+    <version>1.4.1</version>
     <properties>
         <argLine>-Dfile.encoding=UTF-8</argLine>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>15</maven.compiler.release>
         <javafx.version>15.0.1</javafx.version>
-        <classifier>linux</classifier>
+        <classifier>win</classifier>
     </properties>
     <build>
         <resources>
@@ -58,12 +58,28 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>Main.Lanucher</mainClass>
+                                    <mainClass>fffffff0x.beryenigma.App.Lanucher</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.5</version>
+                <configuration>
+                    <release>${maven.compiler.release}</release>
+                    <jlinkImageName>BE</jlinkImageName>
+                    <launcher>launcher</launcher>
+                    <mainClass>BE/ffffffff0x.beryenigma.App.Main</mainClass>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>java.base/java.lang.reflect=com.jfoenix</option>
+                        <!--<option>&#45;&#45;illegal-access=permit</option>-->
+                    </options>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -96,23 +112,30 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-text</artifactId>
-            <version>1.3</version>
+            <groupId>apache</groupId>
+            <artifactId>ApacheCommons</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/lib/ApacheCommons-1.0.jar</systemPath>
         </dependency>
 
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.10</version>
-        </dependency>
-        <!--
-        <dependency>
-            <groupId>org.controlsfx</groupId>
-            <artifactId>controlsfx</artifactId>
-            <version>8.40.17</version>
-        </dependency>
-        -->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.commons</groupId>-->
+<!--            <artifactId>commons-text</artifactId>-->
+<!--            <version>1.3</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>commons-codec</groupId>-->
+<!--            <artifactId>commons-codec</artifactId>-->
+<!--            <version>1.10</version>-->
+<!--        </dependency>-->
+
+<!--        <dependency>-->
+<!--            <groupId>org.controlsfx</groupId>-->
+<!--            <artifactId>controlsfx</artifactId>-->
+<!--            <version>8.40.17</version>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
